<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weightText"
        android:layout_width="388dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/enter_your_weight"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/heightText"
        android:layout_width="390dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_your_height"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="59dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/custom_button"
        android:onClick="bmiCalculate"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"

        android:layout_width="328dp"
        android:layout_height="139dp"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightText"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/newAcBtn"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/custom_button"
        android:text="@string/move_to_new_activity"
        app:layout_constraintBottom_toTopOf="@+id/weightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />
</androidx.constraintlayout.widget.ConstraintLayout>