<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="162dp"

        android:layout_marginStart="49dp"
        android:layout_marginEnd="132dp"
        android:background="@color/teal_200"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <Button
        android:id="@+id/button3"
        android:layout_width="157dp"
        android:layout_height="92dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="285dp"
        android:background="@color/teal_200"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="158dp"
        android:layout_height="92dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="75dp"
        android:background="@color/teal_200"
        android:text="@string/button_3"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="347dp"
        android:layout_height="139dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="68dp"
        android:background="@color/teal_200"
        android:text="@string/button_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.933" />

    <Button
        android:id="@+id/backActBtn"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="105dp"
        android:text="@string/back_to_activity_1"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>